--- a/mobile/package.json
+++ b/mobile/package.json
@@ -35,7 +35,7 @@
         "@react-native-async-storage/async-storage": "^2.0.0",
         "@react-native-community/datetimepicker": "^8.0.0",
         "@react-native-community/netinfo": "^11.3.3",
-        "@react-native-picker/picker": "2.7.5",
+        "@react-native-picker/picker": "~2.11.0",
         "@react-navigation/material-bottom-tabs": "^6.2.29",
         "@react-navigation/native": "^6.0.2",
         "@react-navigation/stack": "^6.2.0",
@@ -48,14 +48,14 @@
         "expo-application": "6.0.2",
         "expo-background-fetch": "~12.0.1",
         "expo-build-properties": "~0.12.5",
-        "expo-constants": "~16.0.2",
+        "expo-constants": "~17.0.8",
         "expo-font": "~13.0.4",
         "expo-image-manipulator": "~12.0.5",
         "expo-image-picker": "~15.1.0",
-        "expo-linking": "~6.3.1",
+        "expo-linking": "~7.0.5",
         "expo-localization": "~15.0.3",
-        "expo-router": "~3.5.23",
-        "expo-splash-screen": "~0.27.5",
+        "expo-router": "~4.0.21",
+        "expo-splash-screen": "~0.29.24",
         "expo-status-bar": "~1.12.1",
         "expo-system-ui": "~3.0.7",
         "expo-task-manager": "~12.0.6",
@@ -64,23 +64,24 @@
         "formik": "^2.2.9",
         "i18next": "^23.16.2",
         "in": "^0.19.0",
+        "lucide-react-native": "^0.552.0",
         "mobile": "^0.0.1",
         "react": "18.3.1",
         "react-dom": "^18.3.1",
         "react-i18next": "^15.0.0",
-        "react-native": "^0.76.0",
+        "react-native": "^0.77.0",
         "react-native-background-timer": "^2.4.1",
         "react-native-dotenv": "^3.2.0",
         "react-native-elements": "^3.4.3",
-        "react-native-gesture-handler": "~2.20.0",
+        "react-native-gesture-handler": "~2.25.0",
         "react-native-keyboard-aware-scroll-view": "^0.9.4",
         "react-native-multiple-select": "^0.5.6",
         "react-native-multiple-select-list": "^1.0.4",
         "react-native-paper": "^5.12.4",
         "react-native-progress-steps": "^2.0.3",
-        "react-native-reanimated": "~3.16.1",
-        "react-native-safe-area-context": "^4.12.0",
-        "react-native-screens": ">=4.0 <4.5",
+        "react-native-reanimated": "~3.16.7",
+        "react-native-safe-area-context": "~5.1.0",
+        "react-native-screens": "~4.8.0",
         "react-native-svg": ">=15.8.0 <15.13.0",
         "react-native-web": "~0.19.10",
         "react-redux": "^7.2.6",
@@ -108,7 +109,7 @@
         "better-sqlite3": "^11.5.0",
         "expo-modules-autolinking": "~2.0.0",
         "jest": "^29.2.1",
-        "jest-expo": "~51.0.3",
+        "jest-expo": "~52.0.6",
         "metro": "^0.81.0",
         "metro-config": "^0.81.0",
         "metro-resolver": "^0.81.0",
