--- a/.github/workflows/main-cicd.yml
+++ b/.github/workflows/main-cicd.yml
@@ -8,11 +8,11 @@ on:
     branches: [main]
   workflow_dispatch:
 env:
-  HUB_REPO_BACKEND: '${{ secrets.HUB_REPO_BACKEND }}'
-  HUB_REPO_FRONTEND: '${{ secrets.HUB_REPO_FRONTEND }}'
-  HUB_TOKEN: '${{ secrets.HUB_TOKEN }}'
-  HUB_USER: '${{ secrets.HUB_USER }}'
-  GRAFANA_API_KEY: '${{ secrets.GRAFANA_API_KEY }}'
+  HUB_REPO_BACKEND: "${{ secrets.HUB_REPO_BACKEND }}"
+  HUB_REPO_FRONTEND: "${{ secrets.HUB_REPO_FRONTEND }}"
+  HUB_TOKEN: "${{ secrets.HUB_TOKEN }}"
+  HUB_USER: "${{ secrets.HUB_USER }}"
+  GRAFANA_API_KEY: "${{ secrets.GRAFANA_API_KEY }}"
   NPM_VERSION: 10.7.0
   CLONE_DEPTH: 150
   # Keep npm's cache out of home directory (mounted from host)
@@ -63,7 +63,7 @@ jobs:
     env:
       # Keep Gradle's settings file out of home directory (mounted from host)
       GRADLE_USER_HOME: /isolated_build/.gradle
-      EXPO_CLI_HOME: ${{ github.workspace }}/.expo
+      HOME: /isolated_build/
     steps:
       - name: Checkout code into container
         uses: bfraser/cicd/actions/checkout@v1
@@ -94,9 +94,6 @@ jobs:
       - name: Run TypeScript compiler
         run: npx tsc --noEmit
         working-directory: /isolated_build/repo/mobile
-        
-      - name: Create Expo home
-        run: mkdir -p /isolated_build/.expo
 
       # todosd: remove need for sudo?
       - name: Prebuild android folder
@@ -126,54 +123,20 @@ jobs:
       #     if-no-files-found: error
 
       - name: Build AAB for Play Store (Targeting Production Server)
+        # If the HOME folder is left as the default /github/home, then `npm run build-aab prod`
+        #    fails with the error: Error: EACCES: permission denied, mkdir '/github/home/.expo'
+        #    from the file: /isolated_build/repo/mobile/node_modules/@expo/cli/bin/cli.ts
+        # Fix: Set HOME to /isolated_build/ in the job's env: section above.
         run: |
           rm -f /isolated_build/repo/mobile/android/app/build/outputs/bundle/release/app-release.aab
           npm run build-aab prod
         working-directory: /isolated_build/repo/mobile
       - uses: actions/upload-artifact@v3
         with:
-          name: 'CBR-Mobile-${{ steps.date_str.outputs.stdout }}-Prod.aab'
+          name: "CBR-Mobile-${{ steps.date_str.outputs.stdout }}-Prod.aab"
           path: /isolated_build/repo/mobile/android/app/build/outputs/bundle/release/app-release.aab
           retention-days: 60
           if-no-files-found: error
-
-    # # Only build the APK targeting the development server because it can be retargeted to other servers.
-    # # (This saves about 10 minutes on the CI/CD build because the SFU GitHub server is very slow on upload)
-    # - name: Build APK (Targeting Local Server)
-    #   run:  |
-    #     rm -f /isolated_build/repo/mobile/android/app/build/outputs/apk/release/app-release.apk
-    #     npm run build-apk local
-    #   working-directory: /isolated_build/repo/mobile
-    # - uses: actions/upload-artifact@v3
-    #   with:
-    #     name: "CBR-Mobile-${{ steps.date_str.outputs.stdout }}-Local.apk"
-    #     path: /isolated_build/repo/mobile/android/app/build/outputs/apk/release/app-release.apk
-    #     retention-days: 60
-    #     if-no-files-found: error
-
-    # - name: Build APK (Targeting Staging Server)
-    #   run:  |
-    #     rm -f /isolated_build/repo/mobile/android/app/build/outputs/apk/release/app-release.apk
-    #     npm run build-apk staging
-    #   working-directory: /isolated_build/repo/mobile
-    # - uses: actions/upload-artifact@v3
-    #   with:
-    #     name: "CBR-Mobile-${{ steps.date_str.outputs.stdout }}-Staging.apk"
-    #     path: /isolated_build/repo/mobile/android/app/build/outputs/apk/release/app-release.apk
-    #     retention-days: 60
-    #     if-no-files-found: error
-
-    # - name: Build APK (Targeting Production Server)
-    #   run:  |
-    #     rm -f /isolated_build/repo/mobile/android/app/build/outputs/apk/release/app-release.apk
-    #     npm run build-apk prod
-    #   working-directory: /isolated_build/repo/mobile
-    # - uses: actions/upload-artifact@v3
-    #   with:
-    #     name: "CBR-Mobile-${{ steps.date_str.outputs.stdout }}-Prod.apk"
-    #     path: /isolated_build/repo/mobile/android/app/build/outputs/apk/release/app-release.apk
-    #     retention-days: 60
-    #     if-no-files-found: error
 
   build-web:
     runs-on: [self-hosted, docker]
@@ -204,7 +167,7 @@ jobs:
       - uses: actions/upload-artifact@v3
         if: success()
         with:
-          name: '${{ github.job }}'
+          name: "${{ github.job }}"
           retention-days: 7
           path: /isolated_build/repo/web_build.tar.gz
 
@@ -296,7 +259,6 @@ jobs:
           # However, as of July 2023, SFU's GitHub runner is v2.296.x, so using old syntax (which works on newer)
           # https://github.blog/changelog/2022-10-11-github-actions-deprecating-save-state-and-set-output-commands/
           echo "::set-output name=tag::$IMAGE_TAG"
-
   build-docker-publish-docker-images:
     needs: [build-common, build-web, build-server, export-image-tag]
     # needs: [export-image-tag]   # Used for faking and testing
