--- a/mobile/package.json
+++ b/mobile/package.json
@@ -42,14 +42,14 @@
         "@types/react-native-vector-icons": "^6.4.6",
         "async-mutex": "0.5.0",
         "events": "^3.3.0",
-        "expo": "^52.0.0",
+        "expo": "^53.0.0",
         "expo-application": "6.0.2",
         "expo-background-fetch": "~12.0.1",
         "expo-build-properties": "~0.12.5",
         "expo-constants": "~17.0.8",
         "expo-font": "~13.0.4",
-        "expo-image-manipulator": "~12.0.5",
-        "expo-image-picker": "~15.1.0",
+        "expo-image-manipulator": "~13.1.7",
+        "expo-image-picker": "~16.1.4",
         "expo-linking": "~7.0.5",
         "expo-localization": "~15.0.3",
         "expo-router": "~4.0.21",
@@ -57,17 +57,17 @@
         "expo-status-bar": "~1.12.1",
         "expo-system-ui": "~3.0.7",
         "expo-task-manager": "~12.0.6",
-        "expo-updates": "~0.27.4",
+        "expo-updates": "~0.28.17",
         "expo-web-browser": "~14.0.2",
         "formik": "^2.2.9",
         "i18next": "^23.16.2",
         "in": "^0.19.0",
         "lucide-react-native": "^0.552.0",
         "mobile": "^0.0.1",
-        "react": "18.3.1",
-        "react-dom": "^18.3.1",
+        "react": "19.0.0",
+        "react-dom": "19.0.0",
         "react-i18next": "^15.0.0",
-        "react-native": "^0.77.0",
+        "react-native": "~0.79.7",
         "react-native-background-timer": "^2.4.1",
         "react-native-dotenv": "^3.2.0",
         "react-native-elements": "^3.4.3",
@@ -78,13 +78,13 @@
         "react-native-paper": "^5.12.4",
         "react-native-progress-steps": "^2.0.3",
         "react-native-reanimated": "~3.17.5",
-        "react-native-safe-area-context": "~5.1.0",
+        "react-native-safe-area-context": "~5.4.0",
         "react-native-screens": "~4.9.1",
         "react-native-svg": ">=15.8.0 <15.13.0",
-        "react-native-web": "~0.19.10",
-        "react-redux": "^7.2.6",
+        "react-native-web": "~0.21.2",
+        "react-redux": "~9.2.0",
         "react-router-dom": "^5.2.0",
-        "redux": "^4.1.2",
+        "redux": "^5.0.0",
         "socket.io-client": "^4.3.2",
         "victory-native": "^36.3.1",
         "yup": "^0.32.9"
@@ -100,20 +100,20 @@
         "@expo/prebuild-config": "^8.2.0",
         "@types/jest": "^29.5.12",
         "@types/node": "^15.12.2",
-        "@types/react": "^18.3.3",
+        "@types/react": "19.0.0",
         "@types/react-native-material-dropdown": "^0.11.4",
         "@types/react-router-dom": "^5.1.7",
         "@types/react-test-renderer": "^18.0.7",
         "better-sqlite3": "^11.5.0",
         "expo-modules-autolinking": "~2.0.0",
         "jest": "^29.2.1",
-        "jest-expo": "~52.0.6",
+        "jest-expo": "~53.0.0",
         "metro": "^0.81.0",
         "metro-config": "^0.81.0",
         "metro-resolver": "^0.81.0",
         "prettier": "2.3.0",
         "react-native-vector-icons": "^8.1.0",
-        "react-test-renderer": "18.3.1",
+        "react-test-renderer": "19.0.0",
         "typescript": "^5.6.2"
     },
     "private": true,
