--- a/mobile/app.json
+++ b/mobile/app.json
@@ -27,6 +27,7 @@
         },
         "plugins": [
             "expo-router",
+            "expo-image-picker",
             [
                 "expo-build-properties",
                 {
