--- a/mobile/app.json
+++ b/mobile/app.json
@@ -2,7 +2,7 @@
     "expo": {
         "name": "CBR",
         "slug": "CBR",
-        "version": "1.4.0",
+        "version": "1.4.0-23",
         "orientation": "portrait",
         "icon": "./assets/icon.png",
         "scheme": "cbr",
