--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "devDependencies": {
     "husky": "^9.1.7",
     "lint-staged": "^15.5.2",
-    "prettier": "^3.8.1"
+    "prettier": "2.3.0"
   },
   "scripts": {
     "prepare": "husky"
