--- a/mobile/package.json
+++ b/mobile/package.json
@@ -105,8 +105,9 @@
         "@types/react-router-dom": "^5.1.7",
         "@types/react-test-renderer": "^18.0.7",
         "better-sqlite3": "^11.5.0",
+        "detox": "^20.47.0",
         "expo-modules-autolinking": "~2.0.0",
-        "jest": "^29.2.1",
+        "jest": "^29.7.0",
         "jest-expo": "~53.0.0",
         "metro": "^0.81.0",
         "metro-config": "^0.81.0",
