--- a/common/package.json
+++ b/common/package.json
@@ -25,7 +25,7 @@
         "@types/jest": "^28.1.3",
         "@types/node": "^15.12.1",
         "@types/node-fetch": "^2.6.12",
-        "@types/react": "^18.3.11",
+        "@types/react": "19.0.0",
         "base64url": "^3.0.1",
         "fetch-mock": "^7.3.9",
         "i18next-resources-for-ts": "^1.5.0",
@@ -34,9 +34,9 @@
         "node-abort-controller": "^2.0.0",
         "node-fetch": "^2.6.1",
         "prettier": "^2.3.0",
-        "react": "^18.3.1",
+        "react": "19.0.0",
         "react-i18next": "^15.0.2",
-        "react-test-renderer": "18.2.0",
+        "react-test-renderer": "19.0.0",
         "ts-jest": "^28.0.8",
         "typescript": "^5.6.2"
     }
