--- a/web/package.json
+++ b/web/package.json
@@ -12,16 +12,16 @@
         "@mui/icons-material": "^5.16.7",
         "@mui/lab": "^5.0.0-alpha.170",
         "@mui/material": "^5.16.7",
-        "@mui/x-data-grid": "^5.17.26",
+        "@mui/x-data-grid": "^7.28.3",
         "@mui/x-date-pickers": "^7.28.3",
         "@testing-library/jest-dom": "^5.11.9",
         "@testing-library/react": "^11.2.3",
         "@testing-library/user-event": "^12.6.0",
         "@types/jest": "^26.0.20",
         "@types/node": "^12.19.14",
-        "@types/react": "^18.3.11",
+        "@types/react": "19.0.0",
         "@types/react-csv": "^1.1.1",
-        "@types/react-dom": "^18.3.1",
+        "@types/react-dom": "19.0.0",
         "@types/react-router-dom": "^5.1.7",
         "bootstrap": "^4.5.3",
         "browser-image-compression": "^1.0.17",
@@ -32,10 +32,10 @@
         "formik-mui": "^4.0.0",
         "i18next": "^23.16.0",
         "jwt-decode": "^3.1.2",
-        "react": "^18.3.1",
+        "react": "19.0.0",
         "react-cropper": "^2.1.7",
         "react-csv": "^2.0.3",
-        "react-dom": "^18.3.1",
+        "react-dom": "19.0.0",
         "react-i18next": "^15.0.0",
         "react-router-dom": "^5.3.3",
         "react-scripts": "5.0.1",
@@ -72,8 +72,8 @@
         ]
     },
     "devDependencies": {
+        "@babel/plugin-proposal-private-property-in-object": "^7",
         "prettier": "2.3.0",
-        "typescript": "^5.6.2",
-        "@babel/plugin-proposal-private-property-in-object": "^7"
+        "typescript": "^5.6.2"
     }
 }
