--- a/mobile/package.json
+++ b/mobile/package.json
@@ -14,11 +14,11 @@
         "lint": "expo lint",
         "android": "expo run:android",
         "ios": "expo run:ios",
-        "detox:build:android": "cd android && .\\gradlew assembleDebug assembleAndroidTest",
-        "detox:start": "npx react-native start --port 8081",
-        "detox:test:android": "npx detox test -c android.emu.debug",
-        "e2e:android": "npm run detox:build:android && npm run detox:test:android",
-        "detox:run": "npm run detox:build:android && npx concurrently -k \"npm:detox:start\" \"npx wait-on tcp:8081 && npm run detox:test:android\""
+        "detox:build": "cd android && .\\gradlew assembleDebug assembleAndroidTest",
+        "detox:metro": "npx react-native start --port 8081",
+        "detox:test": "npx detox test -c android.emu.debug",
+        "detox:install": "cd android && .\\gradlew installDebug installDebugAndroidTest -DtestBuildType=debug",
+        "detox:run": "detox build -c android.emu.debug && npx concurrently -k -s command-1 --names metro,test \"npx react-native start\" \"npx wait-on http-get://localhost:8081/status && detox test -c android.emu.debug\""
     },
     "jest": {
         "preset": "jest-expo"
@@ -110,7 +110,9 @@
         "@types/react-native-material-dropdown": "^0.11.4",
         "@types/react-router-dom": "^5.1.7",
         "@types/react-test-renderer": "^18.0.7",
+        "babel-plugin-module-resolver": "^5.0.2",
         "better-sqlite3": "^11.5.0",
+        "concurrently": "^9.2.1",
         "detox": "^20.47.0",
         "dotenv": "^17.2.3",
         "expo-modules-autolinking": "~2.0.0",
@@ -122,7 +124,8 @@
         "prettier": "2.3.0",
         "react-native-vector-icons": "^8.1.0",
         "react-test-renderer": "19.0.0",
-        "typescript": "^5.6.2"
+        "typescript": "^5.6.2",
+        "wait-on": "^8.0.5"
     },
     "private": true,
     "name": "cbr-mobile",
